# SCATrEx

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  default.profraw  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: tutorial.ipynb  vonmises.ipynb  xenograft.ipynb  xenograft_offline.ipynb
scatrex/: __init__.py  callbacks.py  cli.py  scatrex.py  util.py
scatrex/models/: __init__.py
scatrex/models/cna/: __init__.py  node.py  node_opt.py  opt_funcs.py  tree.py
scatrex/models/trajectory/: __init__.py  node.py  node_opt.py  tree.py
scatrex/ntssb/: __init__.py  node.py  ntssb.py  observed_tree.py  search.py  tree.py  tssb.py
scatrex/plotting/: __init__.py  constants.py  scatterplot.py  tree_colors.py
scatrex/utils/: annotate_utils.py  math_utils.py  tree_utils.py
scitram/: __init__.py  cli.py
test/enrichr/: KEGG_2019_Human.Human.enrichr.reports.txt  MSigDB_Hallmark_2020.Human.enrichr.reports.txt
tests/: __init__.py  test_integration.py  test_scatrex.py  test_scitram.py
workflows/benchmark/config/: config.yaml
workflows/benchmark/workflow/: Snakefile
workflows/benchmark/workflow/scripts/: clonealign.py  clonealign_leiden.py  compute_scores.py  correlation.py  gather_scores.py  generate_data.py  leiden.py  plot_benchmark.R  scatrex.py
workflows/dosage_benchmark/config/: config.yaml
workflows/dosage_benchmark/workflow/: Snakefile
workflows/dosage_benchmark/workflow/scripts/: compute_scores.py  plot_benchmark.R  scatrex.py
workflows/main_benchmark/workflow/scripts/: clonealign_leiden.py
workflows/misspecification_benchmark/workflow/scripts/: clonealign.py  correlation.py  gather_scores.py  generate_data.py  leiden.py
workflows/ovca/config/: config.yaml
workflows/ovca/workflow/: Snakefile
workflows/ovca/workflow/rules/: original_analysis.smk  plotting.smk  preprocessing.smk  test_analysis.smk
workflows/ovca/workflow/scripts/: filter_rna_data.py  make_cnv_tree.py  run_scatrex.py
workflows/tnbc/config/: config.yaml
workflows/tnbc/workflow/: Snakefile
(+8 files in other folders)
