[tool.poetry]
name = "scatrex"
version = "0.2.1"
description = "Find gene expression patterns in the evolutionary history of a tumor."
license = "GNU GENERAL PUBLIC LICENSE 3"
authors = ["pedrofale <pedro.miguel.ferreira.pf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cbg-ethz/SCATrEx"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
numpy = "^1.26.3"
scanpy = "^1.9.8"
anndata = "^0.10.5"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
networkx = "^3.2.1"
graphviz = "^0.20.1"
gseapy = "^0.10.5"
pybiomart = "^0.2.0"
tqdm = "^4.66.1"
jax = {extras = ["cpu"], version = "^0.4.20"}

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^24.1.1"
pytest = "^8.0.0"

# [tool.poetry.extra-dependencies]
# pysankey2 =
# scicone =
# jupyter =
# phenograph =
