[metadata]
name = scatrex
version = 0.0.3
author = Pedro F. Ferreira
author_email = pedro.miguel.ferreira.pf@gmail.com
description = Mapping single-cell transcriptomes to copy number evolutionary trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbg-ethz/SCATrEx
project_urls =
    Bug Tracker = https://github.com/cbg-ethz/SCATrEx/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
